--- a/WebModule/rest/build.gradle
+++ b/WebModule/rest/build.gradle
@@ -1,9 +1,5 @@
-apply plugin: 'application'
-
 dependencies {
 	compile 'org.apache.logging.log4j:log4j-api:2.+'
 	compile 'org.apache.logging.log4j:log4j-core:2.+'
-	compile project(':dao-layer')
+	compile project(':backend')
 }
-
-mainClassName = 'com.dabuita.WebModuleMain'
