--- a/WebModule/web-frontend/build.gradle
+++ b/WebModule/web-frontend/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'war'
 
 dependencies {
-    compile project (':domain-model')
+    compile project (':backend')
     compile 'org.springframework:spring-webmvc:3.+'
 }
