--- a/WebModule/backend/build.gradle
+++ b/WebModule/backend/build.gradle
@@ -2,6 +2,9 @@ apply plugin: 'application'
 
 dependencies {
     compile 'org.hibernate:hibernate-core:4.+'
+    // https://mvnrepository.com/artifact/mysql/mysql-connector-java
+    compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.6'
+
 }
 
 mainClassName = 'com.dabuita.App'
