--- a/WebModule/backend/build.gradle
+++ b/WebModule/backend/build.gradle
@@ -1,10 +1,26 @@
 apply plugin: 'application'
 
 dependencies {
-    compile 'org.hibernate:hibernate-core:4.+'
+    compile 'org.hibernate:hibernate-core:4.1.9.Final'
     // https://mvnrepository.com/artifact/mysql/mysql-connector-java
     compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.6'
-
+    compile group: 'org.hibernate', name: 'hibernate-entitymanager', version: '4.1.9.Final'
+    // https://mvnrepository.com/artifact/javax.transaction/jta
+    compile group: 'javax.transaction', name: 'javax.transaction-api', version: '1.2'
+    // https://mvnrepository.com/artifact/org.springframework/spring-jdbc
+    compile group: 'org.springframework', name: 'spring-jdbc', version: '4.3.8.RELEASE'
+    // https://mvnrepository.com/artifact/org.springframework/spring-orm
+    compile group: 'org.springframework', name: 'spring-orm', version: '4.3.8.RELEASE'
+    // https://mvnrepository.com/artifact/org.springframework/spring-core
+    compile group: 'org.springframework', name: 'spring-core', version: '4.3.8.RELEASE'
+    // https://mvnrepository.com/artifact/org.springframework/spring-context
+    compile group: 'org.springframework', name: 'spring-context', version: '4.3.8.RELEASE'
+    // https://mvnrepository.com/artifact/org.springframework/spring-webmvc
+    compile group: 'org.springframework', name: 'spring-webmvc', version: '4.3.8.RELEASE'
+    // https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api
+    compile group: 'javax.servlet', name: 'javax.servlet-api', version: '3.0.1'
+    // https://mvnrepository.com/artifact/org.springframework/spring-oxm
+    compile group: 'org.springframework', name: 'spring-oxm', version: '4.3.8.RELEASE'
 }
 
 mainClassName = 'com.dabuita.App'
