--- a/WebModule/web-frontend/build.gradle
+++ b/WebModule/web-frontend/build.gradle
@@ -2,5 +2,7 @@ apply plugin: 'war'
 
 dependencies {
     compile project (':backend')
-    compile 'org.springframework:spring-webmvc:3.+'
+    // https://mvnrepository.com/artifact/org.springframework/spring-webmvc
+    compile group: 'org.springframework', name: 'spring-webmvc', version: '4.3.8.RELEASE'
+
 }
