--- a/WebModule/web-frontend/build.gradle
+++ b/WebModule/web-frontend/build.gradle
@@ -1,12 +1,5 @@
-apply plugin: 'war'
-
 dependencies {
-    // https://mvnrepository.com/artifact/org.springframework/spring-webmvc
-    compile group: 'org.springframework', name: 'spring-webmvc', version: '4.3.8.RELEASE'
-    compile 'javax.servlet:jstl:1.2'
-    // https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api
-    providedCompile group: 'javax.servlet', name: 'javax.servlet-api', version: '3.0.1'
-    compile group: 'org.springframework', name: 'spring-web', version: '4.3.8.RELEASE'
-    compile project (':backend')
+    // https://mvnrepository.com/artifact/org.thymeleaf/thymeleaf
+    compile group: 'org.thymeleaf', name: 'thymeleaf', version: '2.0.5'
 }
 
