--- a/WebModule/web-frontend/build.gradle
+++ b/WebModule/web-frontend/build.gradle
@@ -1,5 +1,19 @@
+apply plugin: 'war'
+
 dependencies {
-    // https://mvnrepository.com/artifact/org.thymeleaf/thymeleaf
-    compile group: 'org.thymeleaf', name: 'thymeleaf', version: '2.0.5'
+    compile 'org.apache.logging.log4j:log4j-api:2.+'
+    compile 'org.apache.logging.log4j:log4j-core:2.+'
+    // https://mvnrepository.com/artifact/org.springframework/spring-webmvc
+    compile group: 'org.springframework', name: 'spring-webmvc', version: '4.3.8.RELEASE'
+    // https://mvnrepository.com/artifact/org.springframework.security/spring-security-core
+    compile group: 'org.springframework.security', name: 'spring-security-core', version: '4.2.3.RELEASE'
+    compile 'javax.servlet:jstl:1.2'
+    // https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api
+    compile group: 'javax.servlet', name: 'javax.servlet-api', version: '3.0.1'
+    compile group: 'org.springframework', name: 'spring-web', version: '4.3.8.RELEASE'
+    // https://mvnrepository.com/artifact/org.thymeleaf/thymeleaf-spring4
+    compile group: 'org.thymeleaf', name: 'thymeleaf-spring4', version: '3.0.6.RELEASE'
+    compile project(':rest')
+    compile project(':backend')
 }
 
