--- a/WebModule/web-frontend/build.gradle
+++ b/WebModule/web-frontend/build.gradle
@@ -1,19 +1,31 @@
 apply plugin: 'war'
+apply plugin: 'org.springframework.boot'
+apply plugin: 'io.spring.dependency-management'
 
-dependencies {
-    compile 'org.apache.logging.log4j:log4j-api:2.+'
-    compile 'org.apache.logging.log4j:log4j-core:2.+'
-    // https://mvnrepository.com/artifact/org.springframework/spring-webmvc
-    compile group: 'org.springframework', name: 'spring-webmvc', version: '4.3.8.RELEASE'
-    // https://mvnrepository.com/artifact/org.springframework.security/spring-security-core
-    compile group: 'org.springframework.security', name: 'spring-security-core', version: '4.2.3.RELEASE'
-    compile 'javax.servlet:jstl:1.2'
-    // https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api
-    compile group: 'javax.servlet', name: 'javax.servlet-api', version: '3.0.1'
-    compile group: 'org.springframework', name: 'spring-web', version: '4.3.8.RELEASE'
-    // https://mvnrepository.com/artifact/org.thymeleaf/thymeleaf-spring4
-    compile group: 'org.thymeleaf', name: 'thymeleaf-spring4', version: '3.0.6.RELEASE'
-    compile project(':rest')
-    compile project(':backend')
+springBoot {
+    mainClass = "com.dabuita.App"
 }
 
+jar {
+    baseName = 'jmp-multi-module-web-front-end'
+    version = '0.0.1-SNAPSHOT'
+}
+
+
+dependencies {
+    compile project(':backend')
+    compile project(':rest')
+//    compile group: 'org.springframework', name: 'spring-webmvc', version: '4.3.8.RELEASE'
+//    compile group: 'org.springframework.security', name: 'spring-security-core', version: '4.2.3.RELEASE'
+//    compile 'javax.servlet:jstl:1.2'
+//    compile group: 'javax.servlet', name: 'javax.servlet-api', version: '3.0.1'
+//    compile group: 'org.springframework', name: 'spring-web', version: '4.3.8.RELEASE'
+//    compile group: 'org.thymeleaf', name: 'thymeleaf-spring4', version: '3.0.6.RELEASE'
+
+    compile 'org.apache.logging.log4j:log4j-api:2.+'
+    compile 'org.apache.logging.log4j:log4j-core:2.+'
+
+    compile 'org.springframework.boot:spring-boot-starter-thymeleaf:1.5.4.RELEASE'
+    compile 'org.springframework.boot:spring-boot-starter-security:1.5.4.RELEASE'
+    compile('org.springframework.boot:spring-boot-starter-web')
+}
